2012-03-28 Fred Kiefer <FredKiefer@gmx.de>

	* Tests/gui/NSSavePanel/setDelegate_reload.m,
	* Tests/gui/NSView/NSView_autoresize_and_rounding.m,
	* Tests/gui/NSView/NSView_bounds_scale.m,
	* Tests/gui/NSView/NSView_visibleRect.m: Mark all failing tests as
	dashed hopes to prepare for Jenkins.

2012-03-27  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSCell.m (_updateFieldEditor:): Fix what I presume is
	a typo. The "if (nil == _contents) { contents = @""; }" blocks were
	dead code because the contents variable would later
	be set to nil if _contents was nil. This was causing an exception
	when starting editing an empty text field loaded from a xib.

2012-03-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSSplitView.h:
	* Source/NSSplitView.m: Add support for
	splitView:shouldAdjustSizeOfSubview: delegate method.

2012-03-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Images: Add NSAddTemplate.tiff
	* Images/GNUmakefile: Update

2012-03-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSToolTips.m (-mouseEntered:): When calling the owner's
	view:stringForToolTip:point:userData: method, make the point
	relative to the view's coordinate system (tested on OS X) instead
	of relative to the tracking rect (as before.)
	* Source/GSToolTips.m (-_timedOut:): Fix a crash caused by
	invalidating the timer and then using its userInfo object.

2012-03-22  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSAttributedString.m
	(-initWithData:options:documentAttributes:error:): Set
	NSCharacterEncodingDocumentAttribute in the documentAttributes dict
	when reading plain text.

2012-03-22  Eric Wasylishen  <ewasylishen@gmail.com>

	* TextConverters/RTF/RTFConsumer.m: Set NSDocumentTypeDocumentAttribute

2012-03-22  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSAttributedString.m
	(-initWithData:options:documentAttributes:error:): Fixes for TextEdit.
	If no type is provided, assume plain text. If no encoding is provided,